--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
@@ -3,11 +3,23 @@
 
 Migrating the infrastructure involves the following key tasks:
 
-* Creating an xref:Creating_an_infrastructure_mapping[infrastructure mapping] to map the clusters, datastores, and networks of your source environment to your target environment
+. Mapping the resources of your source environment to your target environment (xref:Creating_an_infrastructure_mapping[])
 
-* Creating and running a xref:Creating_and_running_a_migration_plan[migration plan]
-+
-Optionally, you can xref:Canceling_a_migration_plan[cancel] a migration plan that is in progress and retry the migration in the future.
+. Fulfilling the following prerequisites if they apply to your migration plan:
+
+.. Creating a CSV file (xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[])
+* Mandatory, if you are migrating source virtual machines that have been migrated in the past
+* Optional, but recommended, for large migrations
+
+.. Creating a `RHEL premigration` Ansible playbook (xref:Creating_a_rhel_premigration_playbook[])
+* Mandatory, if you are migrating source virtual machines running RHEL or other Linux-based operating system
+
+.. Adding Ansible playbooks to CloudForms (xref:Adding_ansible_playbooks_to_cloudforms[])
+* Mandatory, if you are creating a `RHEL premigration` Ansible playbook
+* Optional, for automated premigration and postmigration tasks
+
+. Creating a migration plan (xref:Creating_a_migration_plan[])
+. Running a migration plan immediately or in the future (xref:Running_a_migration_plan[])
 
 [IMPORTANT]
 ====
@@ -15,4 +27,6 @@ Currently, IMS supports only cold migration. Virtual machines are powered off gr
 ====
 
 include::modules/proc_Creating_an_infrastructure_mapping.adoc[leveloffset=+1]
-include::modules/assembly_Creating_and_running_a_migration_plan.adoc[leveloffset=+1]
+include::modules/con_Migration_plan_prerequisites.adoc[leveloffset=+1]
+include::modules/proc_Creating_a_migration_plan.adoc[leveloffset=+1]
+include::modules/proc_Running_a_migration_plan.adoc[leveloffset=+1]
