--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning_the_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning_the_migration.adoc
@@ -3,10 +3,10 @@
 
 During the planning phase, formulate a specific migration goal, for example, "I want to migrate 2000{nbsp}virtual machines, with 200{nbsp}TB of data, in less than 6 months".
 
-The following resources can help you plan the steps toward that goal:
+The following can help you plan the steps toward that goal:
 
-* xref:Questions_to_ask_before_migration[Questions to ask before migration]
-* xref:Recommendations_for_migration[Recommendations for migration]
+* Questions about resources, guest operating systems, and migration duration (xref:Questions_to_ask_before_migration[])
+* Recommendations for minimizing the impact of the migration on your environment (xref:Recommendations_for_migration[])
 
 include::modules/ref_Questions_to_ask_before_migration.adoc[leveloffset=+1]
 include::modules/ref_Recommendations_for_migration.adoc[leveloffset=+1]
