--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparing_the_environment_for_migration.adoc
@@ -3,10 +3,20 @@
 
 Preparing the environment for migration involves the following key steps:
 
-. xref:Preparing_the_vmware_source_environment[Preparing the source environment]
-. xref:Preparing_the_target_environment[Preparing the target environment]
-. xref:Creating_and_configuring_the_conversion_hosts[Creating and configuring the conversion hosts]
+. Preparing the VMware environment (xref:Preparing_the_vmware_source_environment[])
+. Preparing your target environment:
+
+** Red Hat Virtualization (xref:Preparing_the_rhv_target_environment[])
+** OpenStack Platform (xref:Preparing_the_osp_target_environment[])
+
+. Configuring the conversion hosts (xref:Configuring_the_conversion_hosts[])
+
+You can change the maximum number of concurrent migrations for conversion hosts or providers for better performance and control of the migration process (xref:Changing_the_maximum_number_of_concurrent_migrations[]).
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
-include::modules/assembly_Preparing_the_target_environment.adoc[leveloffset=+1]
-include::modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc[leveloffset=+1]
+include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
+include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+1]
+include::modules/proc_Configuring_the_conversion_hosts.adoc[leveloffset=+1]
+include::modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
+
+// PLACEHOLDER: MIGRATION THROTTLING
