--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,13 +1,13 @@
 [id='Troubleshooting']
 = Troubleshooting
 
-If your migration plan fails or is only partly successful, you can do the following:
+If there are migration errors, you can do the following:
 
-* xref:Retrying_a_failed_migration_plan[Retry the migration plan], if the failure was caused by external factors.
+* xref:Retrying_a_failed_migration_plan[Retry the migration plan], if the failure was caused by external factors, such as network disruption.
 
 * xref:Migration_logs[Check the migration logs].
 
-* Check for xref:Common_issues_and_mistakes[common issues and mistakes]:
+* Check the following xref:Common_issues_and_mistakes[common issues and mistakes]:
 
 ** xref:Infrastructure_mapping_errors[Infrastructure mapping errors]
 ** xref:Migration_plan_errors[Migration plan errors]
