--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -1,19 +1,9 @@
 // Module included in the following assemblies:
-// assembly_Creating_and_running_a_migration_plan.adoc
+// assembly_Migrating_the_infrastructure.adoc
 [id="Creating_a_migration_plan"]
 = Creating a migration plan
 
-Create a migration plan with an infrastructure mapping, adding the source virtual machines. You can choose to run the migration plan immediately or in the future.
-
-[NOTE]
-====
-For large migrations, it is faster to add the virtual machines with a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] than to select them individually.
-====
-
-.Prerequisites
-
-* Valid infrastructure mapping
-* OpenStack Platform only: Source virtual machines powered on, if you create and run a migration plan immediately
+You create a migration plan with an infrastructure mapping and add the source virtual machines to the plan.
 
 .Procedure
 
