--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
@@ -1,5 +1,5 @@
 // Module included in the following assemblies:
-// assembly_Creating_and_configuring_the_conversion_hosts.adoc
+// proc_Configuring_the_conversion_hosts.adoc
 [id="Creating_OSP_conversion_hosts"]
 = Creating the OpenStack Platform conversion hosts
 
@@ -28,4 +28,4 @@ The OpenStack Platform 14 conversion appliance may be used with OpenStack Platfo
 * Deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview. IS THIS STILL RELEVANT?
 ====
 
-You are ready to xref:Configuring_conversion_hosts_in_CloudForms[configure the conversion hosts in CloudForms].
+You are ready to xref:Configuring_the_conversion_hosts[configure the conversion hosts].
