--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/x_assembly_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/x_assembly_Preparing_the_target_environment.adoc
@@ -3,7 +3,7 @@
 [id="Preparing_the_target_environment"]
 = Preparing the target environment
 
-Prepare your target environment for migration:
+Configure your networks and storage, install software, and add your providers to CloudForms:
 
 ** xref:Preparing_the_rhv_target_environment[]
 ** xref:Preparing_the_osp_target_environment[]
