--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -3,10 +3,14 @@
 
 The Red Hat Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware{nbsp}5.5 (and later) to the following target environments:
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization] 4.3 (RHV). RHV is a virtualization platform built on Red Hat Enterprise Linux (RHEL{nbsp}7). You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization] 4.3
++
+Red Hat Virtualization (RHV) is a virtualization platform built on Red Hat Enterprise Linux (RHEL{nbsp}7). Red Hat Virtualization enables you to manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform[Red Hat OpenStack Platform] 13/14. OpenStack Platform enables you to build a private or public cloud on top of RHEL. OpenStack Platform is scaleable and fault-tolerant.
-
+* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform[Red Hat OpenStack Platform] 13/14
++
+OpenStack Platform enables you to build a private or public cloud on top of RHEL. OpenStack Platform is scaleable and fault-tolerant.
++
 [NOTE]
 ====
 PLACEHOLDER: CNV migration and link to CNV doc.
@@ -25,14 +29,12 @@ The infrastructure migration has the following key steps:
 +
 * Preparing the source environment
 * Preparing the target environment
-* Creating and configuring the conversion hosts
+* Configuring the conversion hosts (Red Hat Virtualization hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`)
 
 . xref:Migrating_the_infrastructure[Migrating the infrastructure]
 +
 * Mapping the source resources to the target infrastructure
-* Creating and running a migration plan
-+
-See xref:Vmware_to_rhv_migration_workflow[] and xref:Vmware_to_osp_migration_workflow[] for details.
+* Creating and running a migration plan (see xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[] for migration process details)
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
