--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
@@ -1,17 +1,23 @@
 // Module included in the following assemblies:
-// assembly_Creating_and_running_a_migration_plan.adoc
+// assembly_Migrating_the_infrastructure.adoc
 [id="Migration_plan_prerequisites"]
 = Migration plan prerequisites
 
-The following prerequisites apply to certain migrations:
+The following prerequisites may apply to your migration plan:
 
-* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file], to add previously migrated virtual machines to the migration plan. The migration plan cannot discover these virtual machines automatically because their status is `migrated` in the CloudForms database.
-+
-Optionally, you can use a CSV file for large migrations.
+* Creating a CSV file (xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[])
+** Mandatory, if you are migrating source virtual machines that have been migrated in the past
+** Optional, but recommended, for large migrations
 
-* xref:Adding_ansible_playbooks_to_cloudforms[Ansible configuration in CloudForms], if you are using playbooks to automate premigration or postmigration tasks
+* Creating a `RHEL premigration` Ansible playbook (xref:Creating_a_rhel_premigration_playbook[])
+** Mandatory, if you are migrating source virtual machines running RHEL or other Linux-based operating system
 
-* xref:Rhel_premigration_playbook[`RHEL premigration` playbook for virtual machines running RHEL or other Linux-based operating system], to ensure that their IP addresses are accessible after migration
+* Adding Ansible playbooks to CloudForms (xref:Adding_ansible_playbooks_to_cloudforms[])
+** Mandatory, if you are creating a `RHEL premigration` Ansible playbook
+** Optional, for automated premigration and postmigration tasks
+
+If these prerequisites do not apply, you can create a migration plan (xref:Creating_a_migration_plan[]).
 
 include::proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc[leveloffset=+1]
+include::proc_Creating_a_rhel_premigration_playbook.adoc[leveloffset=+1]
 include::proc_Adding_ansible_playbooks_to_cloudforms.adoc[leveloffset=+1]
