--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
@@ -55,4 +55,4 @@ If error messages appear, see xref:Infrastructure_mapping_errors[Infrastructure 
 If you add or remove providers or provider objects from an infrastructure mapping, the mapping will have xref:Infrastructure_mapping_missing_resources[missing resource errors]. You must re-create the infrastructure mapping.
 ====
 
-After you have created a successful infrastructure mapping, you can create a  xref:Creating_and_running_a_migration_plan[migration plan].
+After you have created a successful infrastructure mapping, review the migration plan prerequisites to see whether they apply to your migration (xref:Migration_plan_prerequisites[]).
