--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -1,4 +1,4 @@
-// Used in module: assembly_Preparing_the_target_environment.adoc
+// Used in module: assembly_Preparing_the_environment_for_migration.adoc
 [id="Preparing_the_osp_target_environment"]
 = Preparing the Red Hat OpenStack Platform environment
 
@@ -38,9 +38,39 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 +
 [NOTE]
 ====
-Do not remove or change a provider before, during, or after migration because it has negative effects on the CloudForms migration objects.
+Do not remove or change a provider before, during, or after migration because these actions cause errors in infrastructure mappings and migration plans.
 ====
 
 . Ensure that the OpenStack Platform user (default is `cloud-user`) in CloudForms has `admin` privileges for the target projects.
 
-You are ready to xref:Creating_and_configuring_the_conversion_hosts[create and configure the conversion hosts].
+. Deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure. See xref:Deciding_how_many_conversion_hosts_to_create[].
+
+.Deploying OpenStack Platform conversion host instances
+
+. Navigate to the link:https://access.redhat.com/downloads/[Red Hat Customer Portal Product Downloads] site.
+. In the *A-Z* tab, click *Red Hat OpenStack Platform*.
+. Click the green *Download Latest* button to go to the OpenStack Platform download page.
+. Click the *Product Software* tab and download the `RHOSP V2V Image for Red Hat OpenStack Director (x86_64)`.
++
+[NOTE]
+====
+Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes.
+
+The OpenStack Platform 14 conversion appliance can be used with OpenStack Platform 13.
+====
+. Upload the appliance to Glance storage.
+. Deploy the appliance as a conversion host instance, with the following resources:
++
+** 4 vCPUs
+** 8 GB RAM
+** `/tmp` (1 GB for each conversion)
+** `/var/tmp` (1 GB for each conversion)
+** `/var/logs` (5 GB)
++
+For optimal performance:
+
+* Deploy the conversion hosts on more than one hypervisor.
+* Deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview. IS THIS STILL RELEVANT?
+
+
+You are ready to xref:Configuring_the_conversion_hosts[configure the conversion hosts].
