--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Running_a_migration_plan.adoc
@@ -1,20 +1,17 @@
 // Module included in the following assemblies:
-// assembly_Creating_and_running_a_migration_plan.adoc
+// assembly_Migrating_the_infrastructure.adoc
 [id="Running_a_migration_plan"]
 = Running a migration plan
 
-You can run the migration plan xref:Running_migration_plan_immediately[immediately] or in the xref:Running_migration_plan_future[future], depending on the schedule option that you select.
+You can run a migration plan xref:Running_migration_plan_immediately[immediately] or in the xref:Running_migration_plan_future[future]. Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan in progress].
 
-Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan] that has started running.
-
-.Prerequisites
-
-* Valid infrastructure mapping
-* Valid migration plan
-* OpenStack Platform only: Source virtual machines powered on
+[NOTE]
+====
+For OpenStack Platform, source virtual machines must be powered on at the time of migration.
+====
 
 [id="Running_migration_plan_immediately"]
-== Running a migration plan immediately
+.Running a migration plan immediately
 
 The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time.
 
@@ -22,30 +19,36 @@ To view the migration progress of individual virtual machines:
 
 . Click *Migration Plans in Progress*.
 . Click the migration plan name to display the migration plan details.
-
++
 [NOTE]
 ====
 The counter that shows the migration plan progress in menu:Compute[Migration > Migration Plans] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plans counter displays the total time for running a migration plan, while the migration plan details counter displays the time for migrating the virtual machines.
 ====
 
+:context: immediately
+include::proc_Validating_a_migration_plan.adoc[]
+
 [id="Running_migration_plan_future"]
-== Running a migration plan in the future
+.Running a migration plan in the future
 
 The migration plan is saved in *Migration Plans Not Started* and will not run until you schedule or run it.
 
-* To schedule a migration plan:
+To schedule a migration plan:
 
 . Click the *Schedule* button.
 . In the *Schedule Migration Plan* window, select a date and time and click *Schedule*. The plan's status is *Migration Scheduled* with the date and time.
++
+You can click *Migrate* to run a scheduled migration plan immediately.
 
-* To run a scheduled plan immediately, click *Migrate*.
+To edit or delete a migration plan, click the *More Actions* icon.
 
-* To edit or delete a migration plan, click the *More Actions* icon.
+:context: in_the_future
+include::proc_Validating_a_migration_plan.adoc[]
 
 [id="Canceling_a_migration_plan"]
-= Canceling a migration plan in progress
+.(Optional) Canceling a migration plan in progress
 
-You can cancel a migration plan that has started:
+To cancel a migration plan that has started:
 
 . In menu:Compute[Migration > Migration Plans], click *Migration Plans in Progress*.
 . Select a migration plan and click *Cancel Migration*.
